<resources>
    <string name="app_name">Fura Fila</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <!--<string name="nav_header_subtitle">android.studio@android.com</string>-->
    <string name="nav_header_desc">Navigation header</string>

    <!--Tela de Login-->
    <string name="login_txt_cnpj">CNPJ</string>
    <string name="login_txt_usuario">USUÁRIO</string>
    <string name="login_txt_senha">SENHA</string>
    <string name="login_btn_registrar">Registrar</string>

    <string name="tvTitle">CliSiTef Example v2</string>
    <string name="btConfigure">Configuration</string>
    <string name="btAdmin">Administrative</string>
    <string name="btTransaction">Transaction</string>
    <string name="lbSiTefIP">SiTef Server IP</string>
    <string name="lbStoreId">Store ID</string>
    <string name="lbTerminalId">Terminal ID</string>
    <string name="edCfgTerminalId">SE000001</string>
    <string name="edCfgStoreId">00000001</string>
    <string name="edCfgSiTefIP">52.67.141.229:10035</string>
    <string name="btCfgCancel">Cancel</string>
    <string name="btCfgConfigure">Configure</string>
    <string name="btDlgOk">OK</string>
    <string name="btDlgCancel">Cancel</string>
    <string name="btMenuCancel">Cancel</string>
    <string name="btYNYes">Yes</string>
    <string name="btYNNo">No</string>
    <string name="btYNCancel">Cancel</string>
    <string name="tvConfigure">Terminal Setup</string>
    <string name="tvTransaction">Transaction</string>
    <string name="imgLogo"></string>
    <string name="msgModuloNaoConfigurado">Module not initialized</string>
    <string name="msgCanceladoOperador">Cancelled by operator</string>
    <string name="msgFuncaoInvalida">Invalid function code</string>
    <string name="msgFaltaMemoria">Out of memory</string>
    <string name="msgFalhaComunicacao">SiTef communication error</string>
    <string name="msgCanceladoPortador">Cancelled by cardholder</string>
    <string name="msgNegadaSiTef">Transaction denied by SiTef</string>
    <string name="msgErroPinPad">Pinpad communication error</string>
    <string name="msgOutrosErros">Other errors</string>
    <string name="msgReturned">returned</string>
    <string name="msgPPSearching">Searching pinpad&#8230;</string>
    <string name="msgPPConfiguring">Pinpad connected, please wait&#8230;</string>
    <string name="msgPPConfigured">Pinpad OK, proceeding with transaction&#8230;</string>
    <string name="msgPPDisconnected">Pinpad disconnected</string>
</resources>
