<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="br.com.informsistemas.furafila.activity.LoginActivity">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCNPJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_cnpj"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtCNPJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="text|number"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textCursorDrawable="@null"
            app:backgroundTint="@color/colorAccent"/>

        <TextView
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_usuario"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textCursorDrawable="@null"
            app:backgroundTint="@color/colorAccent"/>

        <TextView
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_senha"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textCursorDrawable="@null"
            app:backgroundTint="@color/colorAccent"/>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:hapticFeedbackEnabled="false"
            android:text="@string/login_btn_registrar"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
